# warframe-resource-donation-bot

./: .gitignore  GoogleAppScript.gs  Readme.md  bot.py  example.config.json  extract_wiki.py  gui_app.py  pyproject.toml  requirements.txt  test_parser.py  warframe_resources.txt
.github/workflows/: release.yml  test.yml
