[project]
name = "discordbot"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Kardeen",email = "Hans.Lindner5@gmail.com"}
]
requires-python = ">=3.13,<3.16"
dependencies = [
    "pyqt6 (>=6.11.0,<7.0.0)",
    "pystray (>=0.19.5,<0.20.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "discord-py (>=2.7.1,<3.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "beautifulsoup4 (>=4.15.0,<5.0.0)",
    "easyocr (>=1.7.2,<2.0.0)",
    "rapidfuzz (>=3.14.5,<4.0.0)",
    "torch (>=2.4.0)",
    "torchvision (>=0.19.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyinstaller (>=6.21.0,<7.0.0)"
]
